[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version="*"}
rsa = {version="*"}
secp256k1 = {version = "0.28.0", features = ["rand","hashes"]}
anyhow="*"
log ="*"
serde = {version="*", features = ["derive"]}
serde_json = "1.0"
libp2p = { version = "0.53.2", features = ["full"] }
tokio = { version = "1.35.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.29"
